# LumenMark

./: .gitignore  README.md  README_ZH.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml  validate.yml  windows-build.yml
docs/qa/: v0.3.10-regression-report.md  v0.3.11-regression-report.md  v0.3.11-theme-sample.md  v0.3.7-regression-report.md  v0.3.8-regression-report.md  v0.3.9-regression-report.md
examples/workspace/: architecture.md
src/: App.test.tsx  App.tsx  i18n.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: EditorPanel.tsx  FindReplaceBar.tsx  RecoveryDialog.tsx  SettingsDialog.tsx  Sidebar.tsx  Toolbar.tsx  UnsavedDialog.tsx  VisualMarkdownEditor.tsx  WorkspaceQuickSearch.tsx  WorkspaceSearchPanel.tsx
src/features/document/: draft.test.ts  draft.ts  session.test.ts  session.ts
src/features/editor/: code-block-enhancements.test.ts  code-block-enhancements.ts  code-theme.ts  document-tools.test.ts  document-tools.ts  format-menu.test.ts  format-menu.ts  markdown-paste.test.ts  markdown-paste.ts  markdown-shortcuts.test.ts  markdown-shortcuts.ts  mermaid-preview.test.ts  mermaid-preview.ts  mermaid-theme.ts
src/features/export/: codeBlocks.test.ts  codeBlocks.ts  document-export.test.ts  document-export.ts
src/features/markdown/: typora-inline.test.ts  typora-inline.ts
src/services/: desktop.test.ts  desktop.ts
(+9 files in other folders)
