[package]
name = "lumenmark"
version = "0.3.9"
description = "A calm cross-platform Markdown editor"
authors = ["LumenMark"]
edition = "2021"

[lib]
name = "lumenmark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tauri = { version = "2", features = [] }
rfd = "0.15"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"

[dev-dependencies]
tempfile = "3"
